# bw_env_fetcher

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: bitwarden.rs  config.rs  env_writer.rs  error.rs  gcp.rs  main.rs
