[package]
name = "bw_env_fetcher"
version = "0.1.0"
edition = "2024"
description = "CLI tool to fetch secrets from Bitwarden Secrets Manager and generate .env files"
authors = ["xhuang"]

[dependencies]
# Bitwarden Secrets Manager SDK
bitwarden = { version = "1.0.0", features = ["secrets"] }

# HTTP client for GCP Secret Manager REST API
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
base64 = "0.22"

# CLI & async runtime
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
colored = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs-next = "2"
rustls-webpki = { version = "0.102", features = ["std"] }


